start kpi writing

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -548,6 +548,25 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> متن\n",
+    "    <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    متن\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    متن\n",
+    "    </li>\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "    تیم دوم؛ استقرار نرم‌افزار\n",
     "    </h2>\n",
@@ -599,7 +618,39 @@
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "    تیم ششم؛ فروش\n",
     "    </h2>\n",
-    "</div>\n"
+    "</div>\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> افزایش سفارشات\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "    ۱. محصول ما از مشتریان موجود چقدر درآمد داشته؟\n",
+    "    </p>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "$$NPS$$\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "    ۲. درصد درآمد به ازای هر مشتری\n",
+    "    </p>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565;\">\n",
+    "        درصد درآمد به ازای هر مشتری = تعداد مشتریان عمده / درآمد کل\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "$$Total_m$$\n",
+    "\n"
    ]
   },
   {
@@ -634,6 +685,18 @@
     "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "    تیم نهم؛ هیات مدیره\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "        شاخص‌های عمومی و کلی\n",
     "    </h2>\n",
     "</div>\n"
    ]
