--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -614,6 +614,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "    تیم ششم؛ فروش\n",
@@ -623,9 +635,31 @@
     "\n",
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
-    "        <b>هدف:</b> افزایش سفارشات\n",
+    "        <b>اهداف:</b>\n",
+    "        <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> افزایش سفارشات </li>\n",
     "    </p>\n",
     "</div>\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>۳ هدف اصلی</b>    \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۱. </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۲. </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۳. </span><br>\n",
+    "</div>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "\n",
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
@@ -635,7 +669,78 @@
     "</div>\n",
     "\n",
     "$$NPS$$\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> معیار اندازه گیری </th>\n",
+    "                <th> منبع داده </th>\n",
+    "                <th> بازه زمانی </th>\n",
+    "                <th> هدف و ارزیابی هدف با S.M.A.R.T </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> میزان  درآمد محصول ما از مشتریان موجود </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> داده‌های ذخیره شده فروش نرم‌افزار</li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li>داده‌های ذخیره شده فروش در طول مدت ۱، ۳، ۶ و ۱۲ ماهه</li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> میزان فروش از آلفا به بتا </li>\n",
+    "                    <li>S: مشخص است؟</li>\n",
+    "                    <li>M: قابل اندازه‌گیری است؟</li>\n",
+    "                    <li>A: دست یافتنی است؟</li>\n",
+    "                    <li>R: مرتبط با کسب‌وکار است؟</li>\n",
+    "                    <li>T: از نظر زمانی روشن است؟</li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
     "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        سوالات مرتبط با شاخص   \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        OKRهای مرتبط برای شاخص‌ها  \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۱. </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۲. </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۳. </span><br>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
     "    ۲. درصد درآمد به ازای هر مشتری\n",
@@ -651,6 +756,16 @@
     "\n",
     "$$Total_m$$\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
+    "</p>"
    ]
   },
   {
