--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -511,7 +511,8 @@
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
     "        توضیح مختصر از ۵ شاخص جهت ارزیابی\n",
     "    </p>\n",
-    "</div>"
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -528,6 +529,66 @@
     "        <a href=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\"><img src=\"https://badgen.net/static/Video/KPIs/red?icon=youtube&label/\" alt=\"KPIs\" target=\"_blank\"></a>\n",
     "    </p>\n",
     "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        اصطلاحات و تعاریف لازمه:\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10;\">\n",
+    "        <b>نرخ تبدیل:</b> معیاری است که نسبت درصد افراد یا بازدیدکنندگان یک ابزار (وبسایت،...) در یک دوره‌ی معین به مشتری احتمالی تبدیل می‌شوند. برای نمونه اگر هدف بازدیدکنندگان فرم خاصی را پر کنند، این شاخص درصد افرادی را نشان می‌دهد که این کار را انجام داده‌اند. و یا مشخص می‌شود که چند درصد از کاربران به اهدافی که تعیین کرده‌ایم، می‌رسند. در نتیجه می‌توان موفقیت نرم‌افزار، سایت و... را سنجید و زمینه‌هایی که نیاز به بهبود دارند را شناسایی کرد.\n",
+    "    <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$نرخ\\ تبدیل = \\frac{تعداد \\ مشتریان \\ احتمالی}{تمامی \\ بازدید \\ کنندگان} \\times ۱۰۰$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10;\">\n",
+    "        <b>هزینه جذب سرنخ:</b> نوعی قیمت گذاری در بازاریابی است و به هزینه‌ای گفته می‌شود که به ازای هر مشتری احتمالی یا سرنخ پرداخت می‌شود. معیار اندازه گیری هزینه‌ی جذب سرنخ زمانی مشخص می‌شود که میزان کارایی فعالیت شما در مواجه با مشتریان احتمالی بررسی گردد.\n",
+    "    <br>\n",
+    "    برای مثال اگر شرکت هزار تومان به منظور هر کلیک پرداخت و ۱۰ بازدید کننده را به مشتری احتمالی تبدیل کرده باشد هزینه جذب سرنخ برابر با ۱۰۰۰ تقسیم بر ۱۰ خواهد بود\n",
+    "    <br>\n",
+    "    اگر هزینه ۱۰۰ تومان در مقایسه با هزینه‌ی محصول یا خدمات بسیار زیاد باشد باید هزینه‌ی هر کلیک را براساس آن تنظیم کرد.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$هزینه\\ جذب \\ سرنخ = \\frac{میزان \\ هزینه \\ تبلیغات}{تمامی \\ مشتریان \\ احتمالی}$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10;\">\n",
+    "        <b>زمان پاسخ‌دهی سرنخ</b> زمانی است که طول می‌کشد تا سرنخی را که از طرق مختلف (ایمیل و...) پیدا کرده‌ایم، پیگیری کنیم. \n",
+    "    <br>\n",
+    "    شامل دو مرحله که ابتدا تاریخ یا زمان سرنخ جدید رخ بدهد  منهای تاریخ یا زمان پیگیری که با تعداد دقایق یا ساعت‌ها و روزهایی که پاسخگو بودیم محاسبه شود و سپس مجموع زمان برای پاسخگویی به سرنخ صرف شده تقسیم  و بر مجموع تعداد تماس‌ها که برابر با میانگین زمان پاسخ گویی است شود\n",
+    "    <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$دقایق\\ ساعت‌ها\\ و \\ روزهای \\ پاسخگویی = زمان \\ پیگیری \\ - \\ زمان \\ سرنخ \\ جدید$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$میانگین \\ زمان \\ پاسخگویی = \\frac{مجموع \\ تماس‌ها}{مجموع \\ زمان \\ پاسخگویی}$$\n",
+    "\n",
+    "<br>"
    ]
   },
   {
@@ -778,6 +839,47 @@
     "    تیم هفتم؛ بازاریابی\n",
     "    </h2>\n",
     "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10;\">\n",
+    "        <b>منابع بازاریابی</b> منابعی که شما را به مشتریان بالقوه معرفی می‌کند. اولین قدم برای ارتباط با مشتریان است.\n",
+    "    <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        لیست منابع بازاریابی\n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. رسانه‌های سنتی مانند بیلبورد، تلوزیون و رادیو</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. تماس تلفنی</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. ایجاد تبلیعات در سایت‌هایی مانند شیپور، دیوار و غیره</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. تشویق مشتریان وفادار به معرفی ما به سایر دوستانشان </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. رویدادهایی مانند برگزاری نمایشگاه‌های تجاری، سمینارهای رایگان تبلیغاتی و... </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۶. جستجوگرهایی مانند گوگل </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۷. ارائه‌ی لینک در سایت‌ها</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۸. نرخ کلیک </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۹. شبکه‌های اجتماعی </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱۰. خبرنامه‌های ایمیل </span><br>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        روش‌های بازاریابی (شیوه‌هایی است که مشتری با ما تماس می‌گیرد و همچنین فرصتی برای ماست که ارزش خود و محصول را به مشتری نشان دهیم)\n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. تلفن</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. پست الکترونیک</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. مکالمه‌ی حضوری و رودررو</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. وب‌سایت‌ها</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. رسانه‌های اجتماعی</span><br>\n",
+    "    </p>\n",
+    "</div>"
    ]
   },
   {
