--- a/40204/01_SupportTeamKPIs.ipynb
+++ b/40204/01_SupportTeamKPIs.ipynb
@@ -117,6 +117,14 @@
     "\n",
     "$$Sample\\ =\\ PipeLine\\ Velocity = \\frac{N_{f} \\times Cost_{Avgf} \\times Perc_{Success}}{Cycle\\ of\\ Purch}$$\n",
     "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>کد پایتون:</b> <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "<br>\n",
     "\n",
     "``` python\n",
     "def calculate_response_time(requests):\n",
@@ -128,45 +136,54 @@
     "\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
     "        سوالات مرتبط با شاخص   \n",
     "    </p>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
     "</div>\n",
     "\n",
     "<br><br>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
     "        OKRهای مرتبط برای شاخص‌ها  \n",
     "    </p>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> <b> هدف: </b> کاهش زمان پاسخ‌دهی به درخواست‌ها به زیر ۲ ساعت تا پایان سه ماه بعد </span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\"> \n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> کاهش زمان پاسخ‌دهی به درخواست‌ها به زیر ۲ ساعت تا پایان سه ماه بعد </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> \n",
     "        <b> اهداف گروهی: </b><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
     "         ۱. افزایش کارایی فرآیند پاسخ‌دهی به درخواست‌ها\n",
-    "        <br>\n",
-    "        ۲. بهبود فرآیند ارتباط با مشتریان و درک بهتر نیازهای آن\n",
     "        </span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
-    "        <b> نتایج کلیدی: </b> \n",
-    "        ۱. کاهش میانگین زمان پاسخ‌دهی به درخواست‌ها به زیر ۲ ساعت\n",
-    "        <br>\n",
-    "        ۲. افزایش به ۹۵ درصد درخواست‌های پاسخ‌دهی شده در محدوده زمانی مشخص\n",
-    "        <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. بهبود فرآیند ارتباط با مشتریان و درک بهتر نیازهای آن\n",
+    "        </span>\n",
     "    </span><br>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
-    "        <b> اقدامات: </b> \n",
-    "        ۱. آموزش کارکنان درباره فنون و مهارت‌های ارتباطی و رضایتمندی مشتریان\n",
-    "        <br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> نتایج کلیدی: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. کاهش میانگین زمان پاسخ‌دهی به درخواست‌ها به زیر ۲ ساعت\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
     "        ۲. افزایش به ۹۵ درصد درخواست‌های پاسخ‌دهی شده در محدوده زمانی مشخص\n",
-    "        <br>\n",
+    "        </span><br>\n",
+    "    </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> اقدامات: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. آموزش کارکنان درباره فنون و مهارت‌های ارتباطی و رضایتمندی مشتریان\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. افزایش به ۹۵ درصد درخواست‌های پاسخ‌دهی شده در محدوده زمانی مشخص\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
     "        ۳. برنامه‌ریزی و تخصیص منابع بهینه برای پاسخ‌دهی سریع به درخواست‌ها\n",
+    "        </span>\n",
     "    </span><br>\n",
     "</div>\n"
    ]
