add button for traveling pages

--- a/40204/00_SoftWareCompanyKPIs.ipynb
+++ b/40204/00_SoftWareCompanyKPIs.ipynb
@@ -608,6 +608,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div align=\"center\">\n",
+    "    <a class=\"button primary mini rounded\" href=\"https://github.com/MKarimi21/ChargoonCompany/blob/main/40204/01_SupportTeamKPIs.ipynb\" role=\"button\">Support Team KPIs Page</a> &nbsp; &nbsp;\n",
+    "    <a class=\"button primary mini rounded\" href=\"#\" role=\"button\">Move Up</a>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "    تیم دوم؛ استقرار نرم‌افزار\n",
